--- a/about.html
+++ b/about.html
@@ -121,19 +121,11 @@ Fixed Navigation
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  Get Started <i class="tf-ion-chevron-down"></i>
+                  Login <i class="tf-ion-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown02">
                   <li>
                     <a class="dropdown-item" href="404.html">Ana Online</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="blog.html">Anisa Online</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="single-post.html"
-                      >Blog Single Page</a
-                    >
                   </li>
                 </ul>
               </li>
@@ -238,40 +230,6 @@ End Fixed Navigation
               alt=""
               class="img-fluid mt-30"
             />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="promo-video section-sm">
-      <div class="container">
-        <div class="row justify-content-center">
-          <!-- section title -->
-          <div class="col-xl-6 col-lg-8">
-            <div class="title text-center">
-              <h2>Our Promo Video</h2>
-              <p>
-                Vestibulum nisl tortor, consectetur quis imperdiet bibendum,
-                laoreet sed arcu.Sed condimentum iaculis ex, in faucibus lorem
-                accumsan non. Donec mattis tincidunt metus. Morbi sed tortor a
-                risus luctus dignissim.
-              </p>
-              <div class="border"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <!-- /section title -->
-          <div class="col-md-8 mx-auto">
-            <iframe
-              src="https://player.vimeo.com/video/51119176"
-              width="100%"
-              height="360"
-              frameborder="0"
-              webkitallowfullscreen
-              mozallowfullscreen
-              allowfullscreen
-            ></iframe>
           </div>
         </div>
       </div>
@@ -524,78 +482,7 @@ Start Call To Action
     </section>
     <!-- End section -->
     <!--
-Start Counter Section
-==================================== -->
-    <section class="counter-wrapper section-sm">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xl-6 col-lg-8 text-center">
-            <div class="title">
-              <h2>Award-Winning Agency</h2>
-              <p>
-                Vestibulum nisl tortor, consectetur quis imperdiet bibendum,
-                laoreet sed arcu. Sed condimentum iaculis ex, in faucibus lorem
-                accumsan non. Donec mattis tincidunt metus. Morbi sed tortor a
-                risus luctus dignissim.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <!-- first count item -->
-          <div class="col-md-3 col-sm-6 col-xs-6 text-center">
-            <div class="counters-item">
-              <i class="tf-ion-ios-alarm-outline"></i>
-              <div>
-                <span class="counter" data-count="150">0</span>
-              </div>
-              <h3>Happy Clients</h3>
-            </div>
-          </div>
-          <!-- end first count item -->
 
-          <!-- second count item -->
-          <div class="col-md-3 col-sm-6 col-xs-6 text-center">
-            <div class="counters-item">
-              <i class="tf-ion-ios-analytics-outline"></i>
-              <div>
-                <span class="counter" data-count="130">0</span>
-              </div>
-              <h3>Projects completed</h3>
-            </div>
-          </div>
-          <!-- end second count item -->
-
-          <!-- third count item -->
-          <div class="col-md-3 col-sm-6 col-xs-6 text-center">
-            <div class="counters-item">
-              <i class="tf-ion-ios-compose-outline"></i>
-              <div>
-                <span class="counter" data-count="99">0</span>
-              </div>
-              <h3>Positive feedback</h3>
-            </div>
-          </div>
-          <!-- end third count item -->
-
-          <!-- fourth count item -->
-          <div class="col-md-3 col-sm-6 col-xs-6 text-center">
-            <div class="counters-item kill-border">
-              <i class="tf-ion-ios-bolt-outline"></i>
-              <div>
-                <span class="counter" data-count="250">0</span>
-              </div>
-              <h3>Cups of Coffee</h3>
-            </div>
-          </div>
-          <!-- end fourth count item -->
-        </div>
-        <!-- end row -->
-      </div>
-      <!-- end container -->
-    </section>
-    <!-- end section -->
-    <!--
 Start Call To Action
 ==================================== -->
     <section class="call-to-action section">
