--- a/team.html
+++ b/team.html
@@ -121,19 +121,11 @@ Fixed Navigation
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  Get Started <i class="tf-ion-chevron-down"></i>
+                  Login <i class="tf-ion-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown02">
                   <li>
                     <a class="dropdown-item" href="404.html">Ana Online</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="blog.html">Anisa Online</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="single-post.html"
-                      >Blog Single Page</a
-                    >
                   </li>
                 </ul>
               </li>
