writter-footer-logo-contact

--- a/about.html
+++ b/about.html
@@ -161,32 +161,20 @@ End Fixed Navigation
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mt-20">
-            <h2 class="mb-3">
-              We Create Designs<br />
-              and technology
-            </h2>
+            <h2 class="mb-3">We Create Anaonline<br /></h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
-              voluptate molestias, quaerat quo natus dolor harum voluptatibus
-              modi dicta ducimus.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum
-              quae officia earum dolore est quaerat cupiditate voluptatibus id,
-              magni alias veniam voluptate, libero explicabo, distinctio atque!
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas,
-              fugit itaque ratione incidunt voluptas. Quaerat quidem dolor,
-              quisquam amet inventore quas adipisci ea sint qui placeat beatae
-              molestias aut, aperiam!
+              Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan Hendi
+              sebagai upaya responsif terhadap pengelolaan data anggota Pemuda
+              Persis yang berbasis sistem teknologi informasi. "Dengan sistem
+              ini, kita bisa lebih mudah dalam mengelola database anggota Pemuda
+              Persis seluruh Indonesia
             </p>
           </div>
           <div class="col-lg-6 mt-4 mt-lg-0">
             <img
               loading="lazy"
               class="img-fluid"
-              src="images/company/company-image.jpg"
+              src="images/img/logo.png"
               alt=""
             />
           </div>
@@ -511,9 +499,11 @@ Start Call To Action
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <h3>about</h3>
               <p>
-                Integer posuere erat a ante venenati dapibus posuere velit
-                aliquet. Fusce dapibus, tellus cursus commodo, tortor mauris sed
-                posuere.
+                Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan
+                Hendi sebagai upaya responsif terhadap pengelolaan data anggota
+                Pemuda Persis yang berbasis sistem teknologi informasi. "Dengan
+                sistem ini, kita bisa lebih mudah dalam mengelola database
+                anggota Pemuda Persis seluruh Indonesia
               </p>
             </div>
             <!-- End of .col-sm-3 -->
