--- a/contact.html
+++ b/contact.html
@@ -166,128 +166,49 @@ End Fixed Navigation
           <div class="col-xl-6 col-lg-8">
             <div class="title text-center">
               <h2>Get In Touch</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptate facilis eveniet maiores ab maxime nam ut numquam
-                molestiae quaerat incidunt?
-              </p>
+              <p>أنا مسلم قبل كل شيء</p>
               <div class="border"></div>
             </div>
           </div>
           <!-- /section title -->
         </div>
         <div class="row">
-          <!-- Contact Details -->
-          <div class="contact-details col-md-6">
-            <h3 class="mb-3">Contact Details</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam,
-              vero, provident, eum eligendi blanditiis ex explicabo vitae
-              nostrum facilis asperiores dolorem illo officiis ratione vel
-              fugiat dicta laboriosam labore adipisci.
-            </p>
-            <ul class="contact-short-info mt-4">
-              <li class="mb-3">
-                <i class="tf-ion-ios-home"></i>
-                <span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
-              </li>
-              <li class="mb-3">
-                <i class="tf-ion-android-phone-portrait"></i>
-                <span>Phone: +880-31-000-000</span>
-              </li>
-              <li class="mb-3">
-                <i class="tf-ion-android-globe"></i>
-                <span>Fax: +880-31-000-000</span>
-              </li>
+          <!-- Form -->
+          <div class="contact-form col-md-12">
+            <ul class="d-flex justify-content-center">
               <li>
-                <i class="tf-ion-android-mail"></i>
-                <span>Email: hello@meghna.com</span>
+                <a href="https://www.instagram.com/pp_pemudapersis/"
+                  >Instagram</a
+                >
+              </li>
+              <li class="ml-2">
+                <a
+                  href="https://web.facebook.com/profile.php?id=100066747181849"
+                  >Facebook</a
+                >
+              </li>
+              <li class="ml-2">
+                <a href="https://www.youtube.com/c/pppemudapersis">Youtube</a>
+              </li>
+              <li class="ml-2">
+                <a href="https://twitter.com/pp_pemudapersis">Twitter</a>
               </li>
             </ul>
-            <!-- Footer Social Links -->
-            <div class="social-icon">
-              <ul>
-                <li>
-                  <a href="https://themefisher.com/"
-                    ><i class="tf-ion-social-facebook"></i
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://themefisher.com/"
-                    ><i class="tf-ion-social-twitter"></i
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://themefisher.com/"
-                    ><i class="tf-ion-social-dribbble-outline"></i
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://themefisher.com/"
-                    ><i class="tf-ion-social-linkedin-outline"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-            <!--/. End Footer Social Links -->
-          </div>
-          <!-- / End Contact Details -->
-
-          <!-- Contact Form -->
-          <div class="contact-form col-md-6">
-            <form id="contact-form" method="post" role="form">
-              <div class="form-group mb-4">
-                <input
-                  type="text"
-                  placeholder="Your Name"
-                  class="form-control"
-                  name="name"
-                  id="name"
-                  required
-                />
-              </div>
-
-              <div class="form-group mb-4">
-                <input
-                  type="email"
-                  placeholder="Your Email"
-                  class="form-control"
-                  name="email"
-                  id="email"
-                  required
-                />
-              </div>
-
-              <div class="form-group mb-4">
-                <input
-                  type="text"
-                  placeholder="Subject"
-                  class="form-control"
-                  name="subject"
-                  id="subject"
-                  required
-                />
-              </div>
-
-              <div class="form-group mb-4">
-                <textarea
-                  rows="6"
-                  placeholder="Message"
-                  class="form-control"
-                  name="message"
-                  id="message"
-                  required
-                ></textarea>
-              </div>
-              <div id="cf-submit">
-                <input
-                  type="submit"
-                  id="contact-submit"
-                  class="btn btn-transparent"
-                  value="Submit"
-                />
-              </div>
-            </form>
+            <ul class="d-flex justify-content-center mt-3">
+              <li class="ml-2">
+                <a href="https://www.linkedin.com/in/pp-pemudapersis/"
+                  >Linkedin</a
+                >
+              </li>
+              <li class="ml-2">
+                <a href="https://www.linkedin.com/company/pp-pemuda-persis/"
+                  >Linkedin Company</a
+                >
+              </li>
+              <li class="ml-2">
+                <a href="https://s.id/anaonline">System Anaonline</a>
+              </li>
+            </ul>
           </div>
           <!-- ./End Contact Form -->
         </div>
@@ -301,14 +222,15 @@ End Fixed Navigation
 =            Google Map            =
 =================================-->
     <div class="google-map">
-      <div
-        id="map_canvas"
-        class="map_canvas"
-        data-latitude="40.712776"
-        data-longitude="-74.005974"
-        data-marker="images/marker.png"
-        data-marker-name="Bingo"
-      ></div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8179.461570466177!2d107.607665!3d-6.914674!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x189a05f37b735e92!2zNsKwNTQnNTIuOCJTIDEwN8KwMzYnMjcuNiJF!5e1!3m2!1sen!2sus!4v1665212398213!5m2!1sen!2sus"
+        width="100%"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
     <!--====  End of Google Map  ====-->
 
@@ -319,9 +241,11 @@ End Fixed Navigation
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <h3>about</h3>
               <p>
-                Integer posuere erat a ante venenati dapibus posuere velit
-                aliquet. Fusce dapibus, tellus cursus commodo, tortor mauris sed
-                posuere.
+                Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan
+                Hendi sebagai upaya responsif terhadap pengelolaan data anggota
+                Pemuda Persis yang berbasis sistem teknologi informasi. "Dengan
+                sistem ini, kita bisa lebih mudah dalam mengelola database
+                anggota Pemuda Persis seluruh Indonesia
               </p>
             </div>
             <!-- End of .col-sm-3 -->
@@ -411,9 +335,6 @@ End Fixed Navigation
     <script src="plugins/filterizr/jquery.filterizr.min.js"></script>
     <!-- Smooth Scroll js -->
     <script src="plugins/smooth-scroll/smooth-scroll.min.js"></script>
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU"></script>
-    <script src="plugins/google-map/gmap.js"></script>
 
     <!-- Custom js -->
     <script src="js/script.js"></script>
