--- a/index.html
+++ b/index.html
@@ -581,9 +581,11 @@ Start Blog Section
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <h3>about</h3>
               <p>
-                Integer posuere erat a ante venenati dapibus posuere velit
-                aliquet. Fusce dapibus, tellus cursus commodo, tortor mauris sed
-                posuere.
+                Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan
+                Hendi sebagai upaya responsif terhadap pengelolaan data anggota
+                Pemuda Persis yang berbasis sistem teknologi informasi. "Dengan
+                sistem ini, kita bisa lebih mudah dalam mengelola database
+                anggota Pemuda Persis seluruh Indonesia
               </p>
             </div>
             <!-- End of .col-sm-3 -->
