--- a/portfolio.html
+++ b/portfolio.html
@@ -182,14 +182,11 @@ End Fixed Navigation
           <div class="col-lg-12">
             <div class="portfolio-filter">
               <button type="button" data-filter="all">All</button>
-              <button type="button" data-filter="photography">
-                Photography
+              <button type="button" data-filter="android">Android</button>
+              <button type="button" data-filter="website">Web App</button>
+              <button type="button" data-filter="design">
+                Design Web & Android
               </button>
-              <button type="button" data-filter="ios">IOS App</button>
-              <button type="button" data-filter="development">
-                Development
-              </button>
-              <button type="button" data-filter="design">Design</button>
             </div>
 
             <div class="row">
@@ -503,9 +500,11 @@ End Fixed Navigation
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <h3>about</h3>
               <p>
-                Integer posuere erat a ante venenati dapibus posuere velit
-                aliquet. Fusce dapibus, tellus cursus commodo, tortor mauris sed
-                posuere.
+                Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan
+                Hendi sebagai upaya responsif terhadap pengelolaan data anggota
+                Pemuda Persis yang berbasis sistem teknologi informasi. "Dengan
+                sistem ini, kita bisa lebih mudah dalam mengelola database
+                anggota Pemuda Persis seluruh Indonesia
               </p>
             </div>
             <!-- End of .col-sm-3 -->
