bug social media hover

--- a/portfolio.html
+++ b/portfolio.html
@@ -194,23 +194,23 @@ End Fixed Navigation
                 <div class="filtr-container">
                   <div
                     class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, design"
+                    data-category="website"
                   >
                     <div class="portfolio-block">
                       <img
                         class="img-fluid"
-                        src="images/portfolio/portfolio-1.jpg"
+                        src="images/portfolio/portfolio-1.png"
                         alt=""
                       />
                       <div class="caption">
                         <a
                           class="search-icon"
-                          href="images/portfolio/portfolio-1.jpg"
+                          href="images/portfolio/portfolio-1.png"
                           data-lightbox="image-1"
                         >
                           <i class="tf-ion-ios-search-strong"></i>
                         </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
+                        <h4><a href="portfolio.html">Anisa Online</a></h4>
                       </div>
                     </div>
                   </div>
