bug about portfolio home

--- a/index.html
+++ b/index.html
@@ -218,119 +218,13 @@ End Fixed Navigation
     <!--
 Start About Section
 ==================================== -->
-    <section class="service-2 section">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <!-- section title -->
-            <div class="title text-center">
-              <h2>What Do We Offer</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem
-                ipsum dolor sit amet, consectetur adipisicing elit. Voluptates,
-                earum.
-              </p>
-              <div class="border"></div>
-            </div>
-            <!-- /section title -->
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 text-center d-none d-md-block">
-            <img
-              loading="lazy"
-              src="images/about/member.jpg"
-              class="img-fluid inline-block"
-              alt=""
-            />
-          </div>
-          <div class="col-md-8">
-            <div class="row text-center">
-              <div class="col-md-6 col-sm-6">
-                <div class="service-item">
-                  <i class="tf-ion-ios-alarm-outline"></i>
-                  <h4>Time Management</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce vitae risus nec dui venenatis.
-                  </p>
-                </div>
-              </div>
-              <!-- END COL -->
-              <div class="col-md-6 col-sm-6">
-                <div class="service-item">
-                  <i class="tf-ion-ios-briefcase-outline"></i>
-                  <h4>Marketing Ideas</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce vitae risus nec dui venenatis.
-                  </p>
-                </div>
-              </div>
-              <!-- END COL -->
-              <div class="col-md-6 col-sm-6">
-                <div class="service-item">
-                  <i class="tf-ion-ios-email-outline"></i>
-                  <h4>Mail Support</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce vitae risus nec dui venenatis.
-                  </p>
-                </div>
-              </div>
-              <!-- END COL -->
-              <div class="col-md-6 col-sm-6">
-                <div class="service-item">
-                  <i class="tf-ion-ios-locked-outline"></i>
-                  <h4>Secure System</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce vitae risus nec dui venenatis.
-                  </p>
-                </div>
-              </div>
-              <!-- END COL -->
-            </div>
-          </div>
-        </div>
-        <!-- End row -->
-      </div>
-      <!-- End container -->
-    </section>
-    <!-- End section -->
-
-    <!--
-Start Call To Action
-==================================== -->
-    <section class="call-to-action section">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xl-6 col-lg-8 text-center">
-            <h2>Let's Create Something Together</h2>
-            <p>
-              Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin
-              bibendum auctor, nisi elit consequat ipsum, nesagittis sem nid
-              elit. Duis sed odio sitain elit.
-            </p>
-            <a href="contact.html" class="btn btn-main">Contact Us</a>
-          </div>
-        </div>
-        <!-- End row -->
-      </div>
-      <!-- End container -->
-    </section>
-    <!-- End section -->
-
-    <!--
-Start About Section
-==================================== -->
     <section class="about-2 section" id="about">
       <div class="container">
         <div class="row justify-content-center">
           <!-- section title -->
           <div class="col-lg-6">
             <div class="title text-center">
-              <h2>We Are Bingo Agency</h2>
+              <h2>Features Ana-online</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Quibusdam reprehenderit accusamus labore iusto, aut, eum itaque
@@ -353,28 +247,114 @@ Start About Section
           </div>
           <div class="col-md-6">
             <ul class="checklist">
-              <li>
-                Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem
-                laca quam venenatis vestibulum.
-              </li>
-              <li>
-                Aenean quam. Pellentesque ornare sem laca quam venenatis
-                vestibulum.
-              </li>
-              <li>
-                Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem
-                laca quam venenatis vestibulum.
-              </li>
-              <li>
-                Etiam porta sem multipage evint landing magna mollis euismod a
-                pharetra augue.
-              </li>
-              <li>
-                Aenean quam. Pellentesque ornare sem laca quam venenatis
-                vestibulum.
-              </li>
+              <li>E-Ma'ruf (Caang)</li>
+              <li>Registrasi Anggota</li>
+              <li>Heregistrasi Angota</li>
+              <li>TAFIQ 1</li>
+              <li>TAFIQ 2</li>
+              <li>TAFIQ 3</li>
+              <li>Unduh Dokumen</li>
+              <li>Helpdesk Anaonline</li>
             </ul>
             <a href="about.html" class="btn btn-main mt-20">Learn More</a>
+          </div>
+        </div>
+        <!-- End row -->
+      </div>
+      <!-- End container -->
+    </section>
+    <!-- End section -->
+
+    <!--
+Start Call To Action
+==================================== -->
+    <section class="call-to-action section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-6 col-lg-8 text-center">
+            <h2>Let's Join Something Together</h2>
+            <p>
+              Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin
+              bibendum auctor, nisi elit consequat ipsum, nesagittis sem nid
+              elit. Duis sed odio sitain elit.
+            </p>
+            <a href="contact.html" class="btn btn-main">Telegram Us</a>
+          </div>
+        </div>
+        <!-- End row -->
+      </div>
+      <!-- End container -->
+    </section>
+    <!-- End section -->
+
+    <!--
+Start About Section
+==================================== -->
+    <section class="service-2 section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <!-- section title -->
+            <div class="title text-center">
+              <h2>What we get</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit. Voluptates,
+                earum.
+              </p>
+              <div class="border"></div>
+            </div>
+            <!-- /section title -->
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row text-center">
+              <div class="col-md-6 col-sm-6">
+                <div class="service-item">
+                  <i class="tf-ion-ios-briefcase-outline"></i>
+                  <h4>New Friends</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fusce vitae risus nec dui venenatis.
+                  </p>
+                </div>
+              </div>
+              <!-- END COL -->
+              <div class="col-md-6 col-sm-6">
+                <div class="service-item">
+                  <i class="tf-ion-ios-briefcase-outline"></i>
+                  <h4>Relation Between Volunter</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fusce vitae risus nec dui venenatis.
+                  </p>
+                </div>
+              </div>
+              <!-- END COL -->
+              <div class="col-md-6 col-sm-6">
+                <div class="service-item">
+                  <i class="tf-ion-ios-briefcase-outline"></i>
+                  <h4>Experience Skills</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fusce vitae risus nec dui venenatis.
+                  </p>
+                </div>
+              </div>
+              <!-- END COL -->
+              <div class="col-md-6 col-sm-6">
+                <div class="service-item">
+                  <i class="tf-ion-ios-briefcase-outline"></i>
+                  <h4>Compactness Team</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fusce vitae risus nec dui venenatis.
+                  </p>
+                </div>
+              </div>
+              <!-- END COL -->
+            </div>
           </div>
         </div>
         <!-- End row -->
