--- a/about.html
+++ b/about.html
@@ -396,13 +396,13 @@ Start Call To Action
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-6 col-lg-8 text-center">
-            <h2>Let's Create Something Together</h2>
+            <h2>Let's Join Something Together</h2>
             <p>
               Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin
               bibendum auctor, nisi elit consequat ipsum, nesagittis sem nid
               elit. Duis sed odio sitain elit.
             </p>
-            <a href="contact.html" class="btn btn-main">Contact Us</a>
+            <a href="contact.html" class="btn btn-main">Telegram Us</a>
           </div>
         </div>
         <!-- End row -->
