--- a/portfolio.html
+++ b/portfolio.html
@@ -216,155 +216,49 @@ End Fixed Navigation
                   </div>
                   <div
                     class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, design, ios"
+                    data-category="website"
                   >
                     <div class="portfolio-block">
                       <img
                         class="img-fluid"
-                        src="images/portfolio/portfolio-2.jpg"
+                        src="images/portfolio/portfolio-2.png"
                         alt=""
                       />
                       <div class="caption">
                         <a
                           class="search-icon"
-                          href="images/portfolio/portfolio-2.jpg"
+                          href="images/portfolio/portfolio-2.png"
                           data-lightbox="image-1"
                         >
                           <i class="tf-ion-ios-search-strong"></i>
                         </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
+                        <h4><a href="portfolio.html">Ana Online</a></h4>
                       </div>
                     </div>
                   </div>
                   <div
                     class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, photography, development"
+                    data-category="website"
                   >
                     <div class="portfolio-block">
                       <img
                         class="img-fluid"
-                        src="images/portfolio/portfolio-3.jpg"
+                        src="images/portfolio/portfolio-3.png"
                         alt=""
+                        style="
+                          background-color: rgb(139, 139, 139) !important;
+                          border-radius: 5px;
+                        "
                       />
                       <div class="caption">
                         <a
                           class="search-icon"
-                          href="images/portfolio/portfolio-3.jpg"
+                          href="images/portfolio/portfolio-3.png"
                           data-lightbox="image-1"
                         >
                           <i class="tf-ion-ios-search-strong"></i>
                         </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, photography, ios"
-                  >
-                    <div class="portfolio-block">
-                      <img
-                        class="img-fluid"
-                        src="images/portfolio/portfolio-4.jpg"
-                        alt=""
-                      />
-                      <div class="caption">
-                        <a
-                          class="search-icon"
-                          href="images/portfolio/portfolio-4.jpg"
-                          data-lightbox="image-1"
-                        >
-                          <i class="tf-ion-ios-search-strong"></i>
-                        </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, design"
-                  >
-                    <div class="portfolio-block">
-                      <img
-                        class="img-fluid"
-                        src="images/portfolio/portfolio-5.jpg"
-                        alt=""
-                      />
-                      <div class="caption">
-                        <a
-                          class="search-icon"
-                          href="images/portfolio/portfolio-5.jpg"
-                          data-lightbox="image-1"
-                        >
-                          <i class="tf-ion-ios-search-strong"></i>
-                        </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, design, development"
-                  >
-                    <div class="portfolio-block">
-                      <img
-                        class="img-fluid"
-                        src="images/portfolio/portfolio-6.jpg"
-                        alt=""
-                      />
-                      <div class="caption">
-                        <a
-                          class="search-icon"
-                          href="images/portfolio/portfolio-6.jpg"
-                          data-lightbox="image-1"
-                        >
-                          <i class="tf-ion-ios-search-strong"></i>
-                        </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, photography"
-                  >
-                    <div class="portfolio-block">
-                      <img
-                        class="img-fluid"
-                        src="images/portfolio/portfolio-7.jpg"
-                        alt=""
-                      />
-                      <div class="caption">
-                        <a
-                          class="search-icon"
-                          href="images/portfolio/portfolio-7.jpg"
-                          data-lightbox="image-1"
-                        >
-                          <i class="tf-ion-ios-search-strong"></i>
-                        </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-md-3 col-sm-6 col-xs-6 filtr-item"
-                    data-category="mix, design, development"
-                  >
-                    <div class="portfolio-block">
-                      <img
-                        class="img-fluid"
-                        src="images/portfolio/portfolio-1.jpg"
-                        alt=""
-                      />
-                      <div class="caption">
-                        <a
-                          class="search-icon"
-                          href="images/portfolio/portfolio-1.jpg"
-                          data-lightbox="image-1"
-                        >
-                          <i class="tf-ion-ios-search-strong"></i>
-                        </a>
-                        <h4><a href="portfolio.html">AirBnB Postcard</a></h4>
+                        <h4><a href="portfolio.html">Persis</a></h4>
                       </div>
                     </div>
                   </div>
@@ -379,119 +273,6 @@ End Fixed Navigation
       <!-- end container -->
     </section>
     <!-- End section -->
-    <!-- Start Testimonial
-=========================================== -->
-
-    <section class="testimonial section" id="testimonial">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <!-- testimonial wrapper -->
-            <div class="testimonial-slider">
-              <!-- testimonial single -->
-              <div class="item text-center">
-                <i class="tf-ion-chatbubbles"></i>
-                <!-- client info -->
-                <div class="client-details">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Eum nulla, soluta dolorum. Eos earum, magni asperiores, unde
-                    corporis labore, enim, voluptatum officiis voluptates alias
-                    natus. Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quia, officia. Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Quod, quia?
-                  </p>
-                </div>
-                <!-- /client info -->
-                <!-- client photo -->
-                <div class="client-thumb">
-                  <img
-                    loading="lazy"
-                    src="images/client-logo/clients-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-                <div class="client-meta">
-                  <h3>William Martin</h3>
-                  <span>CEO , Company Name</span>
-                </div>
-                <!-- /client photo -->
-              </div>
-              <!-- /testimonial single -->
-
-              <!-- testimonial single -->
-              <div class="item text-center">
-                <i class="tf-ion-chatbubbles"></i>
-                <!-- client info -->
-                <div class="client-details">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Eum nulla, soluta dolorum. Eos earum, magni asperiores, unde
-                    corporis labore, enim, voluptatum officiis voluptates alias
-                    natus. Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quia, officia. Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Quod, quia?
-                  </p>
-                </div>
-                <!-- /client info -->
-                <!-- client photo -->
-                <div class="client-thumb">
-                  <img
-                    loading="lazy"
-                    src="images/client-logo/clients-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-                <div class="client-meta">
-                  <h3>Emma Harrison</h3>
-                  <span>CEO , Company Name</span>
-                </div>
-                <!-- /client photo -->
-              </div>
-              <!-- /testimonial single -->
-
-              <!-- testimonial single -->
-              <div class="item text-center">
-                <i class="tf-ion-chatbubbles"></i>
-                <!-- client info -->
-                <div class="client-details">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Eum nulla, soluta dolorum. Eos earum, magni asperiores, unde
-                    corporis labore, enim, voluptatum officiis voluptates alias
-                    natus. Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quia, officia. Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Quod, quia?
-                  </p>
-                </div>
-                <!-- /client info -->
-                <!-- client photo -->
-                <div class="client-thumb">
-                  <img
-                    loading="lazy"
-                    src="images/client-logo/clients-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-                <div class="client-meta">
-                  <h3>Alexander Lucas</h3>
-                  <span>CEO , Company Name</span>
-                </div>
-                <!-- /client photo -->
-              </div>
-              <!-- /testimonial single -->
-            </div>
-          </div>
-          <!-- end col lg 12 -->
-        </div>
-        <!-- End row -->
-      </div>
-      <!-- End container -->
-    </section>
-    <!-- End Section -->
 
     <footer id="footer" class="bg-one">
       <div class="top-footer">
