--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <!-- CSS
   ================================================== -->
     <!-- Themefisher Icon font -->
-    <link rel="stylesheet" href="plugins/themefisher-font/style.css" />
+    <link rel="stylesheet" href="plugins/font/style.css" />
     <!-- bootstrap.min css -->
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" />
     <!-- Lightbox.min css -->
