--- a/team.html
+++ b/team.html
@@ -26,8 +26,8 @@
 
     <!-- CSS
   ================================================== -->
-    <!-- Themefisher Icon font -->
-    <link rel="stylesheet" href="plugins/themefisher-font/style.css" />
+    <!-- Icon font -->
+    <link rel="stylesheet" href="plugins/font/style.css" />
     <!-- bootstrap.min css -->
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" />
     <!-- Lightbox.min css -->
