bug-writter-about

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
     <!-- CSS
   ================================================== -->
-    <!-- Themefisher Icon font -->
+    <!-- Icon font -->
     <link rel="stylesheet" href="plugins/font/style.css" />
     <!-- bootstrap.min css -->
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" />
@@ -241,11 +241,11 @@ End Fixed Navigation
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <h3>about</h3>
               <p>
-                Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan
-                Hendi sebagai upaya responsif terhadap pengelolaan data anggota
-                Pemuda Persis yang berbasis sistem teknologi informasi. "Dengan
-                sistem ini, kita bisa lebih mudah dalam mengelola database
-                anggota Pemuda Persis seluruh Indonesia
+                Tujuan utama dibuatnya sistem informasi anaonline, sebagai upaya
+                responsif terhadap pengelolaan data anggota Pemuda Persis yang
+                berbasis sistem teknologi informasi, Maka dengan adanya sistem
+                ini, kita bisa lebih mudah dalam mengelola database anggota
+                Pemuda Persis seluruh Indonesia
               </p>
             </div>
             <!-- End of .col-sm-3 -->
