--- a/about.html
+++ b/about.html
@@ -163,9 +163,9 @@ End Fixed Navigation
           <div class="col-lg-6 mt-20">
             <h2 class="mb-3">We Create Anaonline<br /></h2>
             <p>
-              Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan Hendi
-              sebagai upaya responsif terhadap pengelolaan data anggota Pemuda
-              Persis yang berbasis sistem teknologi informasi. "Dengan sistem
+              Tujuan utama dibuatnya sistem informasi anaonline, sebagai upaya
+              responsif terhadap pengelolaan data anggota Pemuda Persis yang
+              berbasis sistem teknologi informasi, Maka dengan adanya sistem
               ini, kita bisa lebih mudah dalam mengelola database anggota Pemuda
               Persis seluruh Indonesia
             </p>
@@ -418,11 +418,11 @@ Start Call To Action
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <h3>about</h3>
               <p>
-                Tujuan utama dibuatnya sistem informasi tersebut, dijelaskan
-                Hendi sebagai upaya responsif terhadap pengelolaan data anggota
-                Pemuda Persis yang berbasis sistem teknologi informasi. "Dengan
-                sistem ini, kita bisa lebih mudah dalam mengelola database
-                anggota Pemuda Persis seluruh Indonesia
+                Tujuan utama dibuatnya sistem informasi anaonline, sebagai upaya
+                responsif terhadap pengelolaan data anggota Pemuda Persis yang
+                berbasis sistem teknologi informasi, Maka dengan adanya sistem
+                ini, kita bisa lebih mudah dalam mengelola database anggota
+                Pemuda Persis seluruh Indonesia
               </p>
             </div>
             <!-- End of .col-sm-3 -->
