bug image folder imple

--- a/about.html
+++ b/about.html
@@ -170,11 +170,12 @@ End Fixed Navigation
               Persis seluruh Indonesia
             </p>
           </div>
-          <div class="col-lg-6 mt-4 mt-lg-0">
+          <div class="col-lg-6 mt-4 mt-lg-0 text-center">
             <img
               loading="lazy"
               class="img-fluid"
               src="images/img/logo.png"
+              width="320"
               alt=""
             />
           </div>
