--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ End Fixed Navigation
     <div class="hero-slider">
       <div
         class="slider-item th-fullpage hero-area"
-        style="background-image: url(images/img/kopdar1.jpg)"
+        style="background-image: url(images/slider/slider-1.jpg)"
       >
         <div class="container">
           <div class="row">
@@ -179,7 +179,7 @@ End Fixed Navigation
       </div>
       <div
         class="slider-item th-fullpage hero-area"
-        style="background-image: url(images/img/kopdar2.jpg)"
+        style="background-image: url(images/slider/slider-2.jpg)"
       >
         <div class="container">
           <div class="row">
@@ -383,7 +383,7 @@ Start About Section
                 <div class="client-thumb">
                   <img
                     loading="lazy"
-                    src="images/client-logo/clients-1.jpg"
+                    src="images/team/member-1.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -408,7 +408,7 @@ Start About Section
                 <div class="client-thumb">
                   <img
                     loading="lazy"
-                    src="images/client-logo/clients-2.jpg"
+                    src="images/team/member-2.jpg"
                     class="img-fluid"
                     alt=""
                   />
@@ -433,7 +433,7 @@ Start About Section
                 <div class="client-thumb">
                   <img
                     loading="lazy"
-                    src="images/client-logo/clients-3.jpg"
+                    src="images/team/member-3.jpg"
                     class="img-fluid"
                     alt=""
                   />
