--- a/team.html
+++ b/team.html
@@ -181,7 +181,7 @@ Start About Section
           <div class="col-lg-6 mb-5 mb-lg-0">
             <img
               loading="lazy"
-              src="images/about-us.jpg"
+              src="images/team/team.jpg"
               class="img-fluid"
               alt=""
             />
